--- a/CSS/style.css
+++ b/CSS/style.css
@@ -17,7 +17,7 @@ header {
 	justify-content: space-between;
 }
 
-body {
+.index-body {
 	display: flex;
 	flex-direction: column;
 	min-height: 100vh;
@@ -37,7 +37,7 @@ body {
 	background: linear-gradient(90deg, var(--minim-1-color) 0%, var(--minim-2-color) 100%);
 	align-self: center;
 	height: 50px;
-	width: 400px;
+	width: 600px;
 	padding: 10px;
 	border-radius: 10px 0 0 10px;
 }
@@ -61,6 +61,7 @@ body {
 	color: #fff;
 	text-decoration: none;
 	font-size: 20px;
+	white-space: normal; 
 }
 
 /* --- Body --- */
@@ -80,14 +81,13 @@ body {
 	align-items: center;
 	gap: 10px;
 
-	width: 75%;
+	width: 85%;
 	backdrop-filter: blur(5px);
 	border-radius: 10px;
-
 }
 
 .main-element img {
-	width: 15vw;
+	width: 12vw;
 }
 
 .main-element p {
@@ -98,4 +98,9 @@ body {
 
 .main-element p a{	
 	color: var(--minim-1-color);	
+}
+
+.main-element-right {
+	align-self: flex-end; 
+	justify-content: flex-end;
 }
