--- a/CSS/style.css
+++ b/CSS/style.css
@@ -82,7 +82,8 @@ header {
 	gap: 10px;
 
 	width: 85%;
-	backdrop-filter: blur(5px);
+	/* backdrop-filter: blur(5px); <- ne marche pas sur toutes les plateformes*/
+	background-color: rgba(0, 0, 0, .3);
 	border-radius: 10px;
 }
 
